LPD-91209 buildREST
