# modules/dxp/apps/seo-studio/seo-studio-rest-impl/rest-openapi.yaml
@@ -1,7 +1,8 @@
 components:
     schemas:
         CrawledPage:
-            description: "A single crawled page returned by the SEO Studio crawler."
+            description:
+                "A single crawled page returned by the SEO Studio crawler."
             properties:
                 links:
                     items:
@@ -12,18 +13,24 @@ components:
                 url:
                     type: string
             required:
-                - url
+                -   url
             type: object
 info:
-    description: "Liferay SEO Studio REST API"
-    title: "SEO Studio"
-    version: "v1.0"
+    description:
+        "Liferay SEO Studio REST API. A Java client JAR is available for use with the group ID 'com.liferay', artifact
+        ID 'com.liferay.seo.studio.rest.client', and version '1.0.0'."
+    license:
+        name: Apache 2.0
+        url: http://www.apache.org/licenses/LICENSE-2.0.html
+    title: SEO Studio
+    version: v1.0
 openapi: 3.0.1
 paths:
     "/crawl-hits":
         get:
-            description: "Returns crawl hits from the Elasticsearch index for a given hostname."
-            operationId: "getCrawlHitsPage"
+            description:
+                "Returns crawl hits from the Elasticsearch index for a given hostname."
+            operationId: getCrawlHitsPage
             parameters:
                 -   in: query
                     name: indexName
@@ -45,5 +52,11 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/CrawledPage"
                                 type: array
-                    description: "OK"
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/CrawledPage"
+                                type: array
+                    description:
+                        "OK"
             tags: ["CrawledPage"]
